--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -495,6 +495,11 @@ msgctxt "#31096"
 msgid "Press UP to access submenu hub"
 msgstr ""
 
+#: /1080i/Includes_Home.xml
+msgctxt "#31097"
+msgid "Ends at"
+msgstr ""
+
 msgctxt "#31101"
 msgid "items"
 msgstr ""
