--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+0.9.6
+Fix trailers button
+Fix list views for sets
+
 0.9.5
 Fix for submenu widgets on v1.0.17 of skinshortcuts
 Fix for menu items positioning
