--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+0.9.9
+Fix for programs menu
+Scrolling for horizontal menu (no limit on number of items)
+Some tweaks to horizontal menu (still not perfect)
+
 0.9.8
 Fix for addonbrowser top menu
 
