--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -544,6 +544,11 @@ msgctxt "#31107"
 msgid "Item limit"
 msgstr ""
 
+#: /1080i/SkinSettings.xml
+msgctxt "#31108"
+msgid "Minimal busy loader"
+msgstr ""
+
 msgctxt "#31109"
 msgid "Customise home menu"
 msgstr ""
