--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,8 @@
 0.9.14
 Fix notification dialog
 Fix minimal busy loader overlapping now playing when starting a movie
+Fix minimal busy loader overlapping notifications and extendedprogressbar
+Add press down from horizontal home menu 
 
 0.9.13
 Fixes
