--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.9.15
+Fix clearlogo to show in appropriate sections
+
 0.9.14
 Fix notification dialog
 Fix minimal busy loader overlapping now playing when starting a movie
