--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.9.17
+Fix subtitles/audio/video settings dialog not hiding when offset slider is visible
+
 0.9.16
 Fix for YouTube lists (and other addon lists) to only show when addon is installed
 Update busy spinner in local library info search
