--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 0.9.17
 Fix subtitles/audio/video settings dialog not hiding when offset slider is visible
 Add add-ons to search dialog
+Add global home fallback image
 
 0.9.16
 Fix for YouTube lists (and other addon lists) to only show when addon is installed
